- wxStopWatch::Start() resumes the stop watch if paused, as per the docs
- added wxDirTraverser::OnOpenError() to customize the error handling
- added wxArray::SetCount()
- wxFile, wxFFile, wxTextFile and wxTempFile now all use UTF-8 encoding
  by default in Unicode mode

wxBase:

- added Watcom makefiles

All GUI ports:

- added wxSplitterWindow handler to XRC
- added wxFlexGridSizer::SetFlexibleDirection() (Szczepan Holyszewski)
- implemented GetEditControl for wxGenericTreeCtrl (Peter Stieber)
- improved contrib/utils/convertrc parsing (David J. Cooke)
- fixed handling of URLs and filenames in wxFileSystem
- implemented alignment for wxGrid bool editor and renderer
- support wxListCtrl columns alignment for all platforms and not just MSW
- added wxToolBar Add/InsertTool(tool) (Janusz Piwowarski)
- WXR resources can now be used in Unicode builds

- Changed to type-safe wxSizerItemList for wxSizer child items.

    Deprecated:

        wxSizer::Remove( wxWindow* )
            - it does not function as Remove would usually be expected to
              and destroy the window, use Detach instead.

        wxSizer::GetOption(),
        wxSizer::SetOption()
            - wxSizer 'option' parameter was renamed 'proportion' to better
              reflect its action, use Get/SetProportion instead.

        wxKeyEvent::KeyCode()
            - use GetKeyCode instead.

        wxList:: Number, First, Last, Nth
            - use typesafe GetCount, GetFirst, GetLast, Item instead.

        wxNode:: Next, Previous, Data
            - use typesafe Get* instead.

        wxListBase::operator wxList&()
            - use typesafe lists instead.

Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version
- fixed compilation on Solaris 7 with large files support enabled

wxGTK:

- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
- made wxTextCtrl::EmulateKeyPress() work for Delete and Backspace